--- a/SCSS/pages/_search.scss
+++ b/SCSS/pages/_search.scss
@@ -1,8 +1,8 @@
 .custom-carousel-image {
-    width: 75%; /* Ajusta el ancho según tus necesidades */
-    max-width: 800px; /* Máximo ancho para pantallas grandes */
-    margin: 0 auto; /* Centra las imágenes dentro del carrusel */
-    height: auto; /* Mantén la proporción de la imagen */
+    width: 75%; 
+    max-width: 800px; 
+    margin: 0 auto; 
+    height: auto; 
     padding-top: 10px;
     padding-bottom: 10px;
     border-radius: 5px;
